fix overflow, remove h1 underline

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -34,6 +34,8 @@ header {
 
 header a {
     padding: 1rem;
+    text-decoration: none;
+
 }
 
 h1 {
@@ -95,6 +97,7 @@ input:not([value=""]) {
     padding: 2em;
     margin: 1em;
     border-radius: 3em;
+    overflow: hidden;
 
 }
 
